# fox-forest

./: .gitignore  README.rst  play.py  play_streamlit.py  pyproject.toml
.github/workflows/: python-app.yml
foxforest/: __init__.py  game.py  main.py  player.py
tests/: test_foxforest.py
