[tool.poetry]
name = "FoxForest"
version = "0.1.0"
description = ""
authors = ["sander-x"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.11"
numpy = "^1.21.4"
ipython = "^8.4.0"
pip = "^22.2.2"
jupyter = "^1.0.0"
coverage = "^6.4.4"
streamlit = "^1.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^21.11b1"
flake8 = "^4.0.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
